@@ -1558,8 +1558,11 @@ cupsdStartBrowsing(void)
       * Add the master connection to the select list...
       */
 
-      cupsdAddSelect(DNSServiceRefSockFD(DNSSDRef),
-		     (cupsd_selfunc_t)dnssdUpdate, NULL, NULL);
+      int fd = DNSServiceRefSockFD(DNSSDRef);
+
+      fcntl(fd, F_SETFD, fcntl(fd, F_GETFD) | FD_CLOEXEC);
+
+      cupsdAddSelect(fd, (cupsd_selfunc_t)dnssdUpdate, NULL, NULL);
 
      /*
       * Then get the port we use for registrations.  If we are not listening
